# dynify

./: CHANGELOG.md  Cargo.toml  README.md
.github/: codecov.yml
.github/workflows/: cicd.yml
examples/: async_iterator.rs  async_iterator_with_macro.rs  async_sendable.rs  complex_lifetimes.rs  complex_lifetimes_with_macro.rs
macros/: Cargo.toml  README.md
macros/src/: dynify.rs  dynify_tests.rs  lib.rs  lifetime.rs  lifetime_tests.rs  receiver.rs  utils.rs
macros/src/dynify_tests/: fn_renamed.rs  fn_returning_async.rs  fn_returning_impl.rs  fn_with_vis.rs  remote_fn.rs  remote_trait.rs  trait_async_fn.rs  trait_async_method.rs  trait_const_item.rs  trait_empty.rs  trait_impl_fn.rs  trait_impl_method.rs  trait_multi_items.rs  trait_regular_fn.rs  trait_type_item.rs  trait_with_generics.rs  trait_with_name.rs  trait_with_where_clause.rs
macros/src/lifetime_tests/: fn_pointer_as_arg.rs  fn_with_const_generic.rs  fn_with_explicit_lifetimes.rs  fn_with_generic.rs  fn_with_multi_generics.rs  fn_with_unused_lifetime.rs  method.rs  method_with_multi_trait_generics.rs  method_with_trait_generic.rs  method_with_trait_lifetime.rs  one_arg_with_multi_lifetimes.rs  one_fn_with_multi_args.rs  receiver.rs  trait_fn.rs  trait_fn_with_multi_trait_generics.rs  trait_fn_with_trait_lifetime.rs  trait_fn_with_trati_generic.rs  typed_path.rs  typed_path_nested.rs  typed_ref.rs  typed_ref_with_placeholder_lifetime.rs
src/: closure.rs  constructor.rs  constructor_tests.rs  container.rs  container_tests.rs  dynify.md  function.rs  function_tests.rs  lib.md  lib.rs  receiver.rs  utils.rs
tests/: test.rs  ui.rs
tests/compile_fail/: buffered_mut_borrow_twice.stderr  dynify_with_non_ident_args.rs  dynify_with_non_ident_args.stderr  dynify_with_unknown_receiver.rs  dynify_with_unknown_receiver.stderr  dynify_with_unsupported_item.rs  dynify_with_unsupported_item.stderr  from_closure_leak_slot.stderr  from_closure_wrong_type.rs  from_closure_wrong_type.stderr  from_fn_mut_borrow_arg_twice.rs  from_fn_mut_borrow_arg_twice.stderr  from_fn_mut_borrow_self_twice.stderr  from_fn_with_closure.rs  from_fn_with_closure.stderr  from_fn_with_wrong_type.stderr  pinned_buffered_unpin.stderr
tests/compile_pass/: dynify_with_trait_variant.rs  from_closure_coercion.rs  macro_example.rs
tests/ui/: buffered_mut_borrow_twice_fail.rs  buffered_mut_borrow_twice_fail.stderr  from_closure_coercion_pass.rs  from_closure_leak_slot_fail.rs  from_closure_leak_slot_fail.stderr  from_closure_wrong_type_fail.rs  from_closure_wrong_type_fail.stderr  from_fn_mut_borrow_arg_twice_fail.stderr  from_fn_mut_borrow_self_twice_fail.stderr  from_fn_mut_borrow_twice_fail.rs  from_fn_mut_borrow_twice_fail.stderr  from_fn_two_diff_mut_ref_pass.rs  from_fn_with_closure_fail.stderr  from_fn_with_wrong_type_fail.rs  from_fn_with_wrong_type_fail.stderr  pinned_buffered_unpin_fail.rs  pinned_buffered_unpin_fail.stderr
