[package]
name = "dynify"
version = "0.0.1"
authors = ["Loi Chyan <loichyan@foxmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.80"

repository = "https://github.com/loichyan/dynify"
description = "Add dyn compatible variant to you async trait"
keywords = ["async", "trait", "impl"]
categories = ["asynchronous", "no-std", "rust-patterns"]

[features]
default = ["alloc"]
alloc = []

[dev-dependencies]
fastrand = "2.3.0"
pollster = { version = "0.4.0", features = ["macro"] }
rstest = { version = "0.25.0", default-features = false }
trybuild = "1.0.105"

[lints.rust]
unexpected_cfgs.level = "warn"
unexpected_cfgs.check-cfg = ["cfg(coverage)", "cfg(coverage_nightly)"]
unknown_lints = "allow"

[lints.clippy]
uninlined_format_args = "allow"
