[package]
name = "dynify-macros"
version = "0.0.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

repository.workspace = true
description = "Procedural macros for dynify"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit-mut"] }

[dev-dependencies]
fastrand.workspace = true
pretty_assertions = "1.4.1"
prettyplease = "0.2.35"
rstest.workspace = true

[lints]
workspace = true
